[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/angelica/Themes/SuperButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/angelica/Dock/Float.gd" type="Script" id=2]
[ext_resource path="res://addons/angelica/Dock/MenuFloat.gd" type="Script" id=3]
[ext_resource path="res://addons/angelica/Themes/SupperButton.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.298039, 0.298039, 0.298039, 0.494118 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
corner_detail = 6

[sub_resource type="StyleBoxEmpty" id=2]
content_margin_bottom = 17.0

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0.6, 0.6, 0.6, 0.133333 )
border_color = Color( 0.8, 0.8, 0.8, 0.4 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
expand_margin_left = 4.0
expand_margin_right = 4.0
expand_margin_top = 4.0
expand_margin_bottom = 4.0

[node name="Float" type="Node2D"]
position = Vector2( 33.7383, 46.6783 )
script = ExtResource( 2 )

[node name="ColorRect" type="Panel" parent="."]
visible = false
anchor_left = 0.0944941
anchor_top = 0.177176
anchor_right = 0.0944941
anchor_bottom = 0.177176
margin_left = 1.0
margin_top = 2.0
margin_right = 302.0
margin_bottom = 126.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reflex" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.490196 )
position = Vector2( 15.8595, 50.6882 )
scale = Vector2( 1, -1 )

[node name="Menu_reflex" type="RichTextLabel" parent="Reflex"]
visible = false
anchor_top = -0.012
anchor_bottom = -0.012
margin_left = 12.0
margin_top = -129.0
margin_right = 261.0
margin_bottom = 2.0
grow_horizontal = 0
grow_vertical = 0
rect_clip_content = false
size_flags_horizontal = 5
size_flags_vertical = 8
custom_colors/default_color = Color( 0.698039, 0.666667, 0.666667, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
bbcode_enabled = true
bbcode_text = "[img]res://img/48/0000.png[/img]"
meta_underlined = false
tab_size = 1
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="RichTextLabel" parent="."]
anchor_left = 0.0944941
anchor_top = 0.177176
anchor_right = 0.0944941
anchor_bottom = 0.177176
margin_left = 12.8882
margin_top = 12.1748
margin_right = 543.888
margin_bottom = 69.1748
grow_horizontal = 0
grow_vertical = 0
rect_clip_content = false
size_flags_horizontal = 5
size_flags_vertical = 8
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_colors/default_color = Color( 0.698039, 0.666667, 0.666667, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_constants/line_separation = 2
bbcode_enabled = true
bbcode_text = "[img]res://img/48/0000.png[/img]"
meta_underlined = false
tab_size = 1
fit_content_height = true
scroll_active = false
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SuperButton" type="Node2D" parent="." instance=ExtResource( 1 )]
script = ExtResource( 4 )

[connection signal="meta_hover_ended" from="Menu" to="Menu" method="_on_Menu_meta_hover_ended"]
[connection signal="meta_hover_started" from="Menu" to="Menu" method="_on_Menu_meta_hover_started"]
[connection signal="mouse_exited" from="Menu" to="Menu" method="_on_Menu_mouse_exited"]
